fix(SelectComponents): remove useless z-index (#3123)
closes #3041

--- a/src/components/SelectComponents/Select.css
+++ b/src/components/SelectComponents/Select.css
@@ -184,7 +184,6 @@
     }
 
     &_view_default.Select-SelectContainer_focused .Select-Control {
-      z-index: 1;
       border-color: var(--color-control-bg-border-focus);
       outline: none;
     }
